<resources>
    <string name="welcome_">Welcome !</string>
    <string name="please_sign">Please sign in to continue</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forget_pass">Forget Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="app_name" />
    <string name="msg_loading">Loading...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_tracking">Tracking</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="create_an_a">Create an account</string>

    <string name="create_your">Create your event!</string>
    <string name="apply_prop">It’s looks like you haven’t submit any proposal yet. Let’s apply your proposal now!</string>


</resources>
